# robot-arm-build-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
content/: pipeline.md  safety-validation.md
content/build-log/: 2026-07-07-workshop-dashboard.md
content/design-decisions/: 0001-generated-artifacts.md  0002-guarded-child-facing-architecture.md
content/print-logs/: 2026-07-07-initial.md  2026-07-10-safety-prototype.md
firmware/: README.md
firmware/include/: safety_controller.h
firmware/src/: main.cpp  safety_controller.cpp
firmware/test/: Arduino.h  test_safety_controller.cpp
models/: __init__.py  azimuth_turntable_shoulder_cleat.py  belt_base_candidate.py  bicep_arm_link.py  bicep_belt_cover.py  byj48_stepper_motor.py  common.py  electronics_enclosure.py  electronics_mounts.py  forearm_link.py  geared_base_stator.py  guarded_assembly.py  hardware.py  joint_shafts.py  master_assembly.py  nema17_stepper_motor.py  safety_guards.py  sample_box.py  sg90_gripper_base.py  sg90_parallel_gripper.py  transmission_components.py  wire_management.py  wrist_keyed_shaft_adapter.py
scripts/: export_models.py  generate_catalog.py  generate_progress_feed.py  model_registry.py  publish_web_models.py
site/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
site/simulator/: index.html
site/src/: main.tsx  motion.ts  styles.css
site/tests/: motion.test.mjs  smoke.spec.ts
tests/: test_generated_catalog.py  test_robot_parts.py  test_safety_additions.py  test_sample_box.py
